# AutoDiff

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
benchmarks/: cpp_benchmark.cpp  python_benchmark.py
examples/: forward_mode_example.py  logistic_regression.py  small_neural_network.py
include/autodiff/: tensor.hpp
src/: python_bindings.cpp
src/autodiff/: __init__.py  core.py  tensor.py
src/cpp/: tensor.cpp
tests/: test_autodiff.py  test_tensor.py  test_tensor_cpp.cpp
