[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kevinli24-autodiff"
version = "0.1.0"
description = "Forward- and reverse-mode automatic differentiation with a C++ tensor backend"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Kevin Li" },
]
classifiers = [
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["numpy>=1.24"]

[tool.setuptools.packages.find]
where = ["src"]
